# centinela

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bench/: targets.json
core/: __init__.py  agent.py  auth.py  benchmark.py  brain.py  checks.py  compliance.py  crawler.py  dnsaudit.py  engine.py  guard.py  gui.py  http.py  llm.py  locallab.py  mind.py  notify.py  profile.py  prospect.py  recon.py  remediate.py  report.py  report_html.py  sast.py  scanner.py  seal.py  store.py  templates.py  vulns.py
docs/: sample-report.html
landing/: index.html  script.js  styles.css
templates/: adminer.json  docker-compose-exposure.json  elasticsearch-open.json  gitlab-panel.json  grafana-panel.json  jenkins-panel.json  kibana-panel.json  mercurial-exposure.json  npmrc-exposure.json  phpmyadmin.json  prometheus-open.json  solr-admin.json  spring-actuator.json  svn-wc-db.json  swagger-ui.json  traefik-dashboard.json  vscode-sftp-creds.json  web-inf-web-xml.json  wordpress-login.json
tests/: test_api.py  test_benchmark.py  test_centinela.py  test_compliance.py  test_integration.py  test_mind.py  test_prospect.py
web/: app.js  index.html  style.css
