[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "centinela"
version = "1.0.0"
description = "Plataforma de seguridad web autónoma (escáner + pentester + guardián), sin dependencias externas."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Santiago Martínez" }]
keywords = ["security", "pentest", "vulnerability-scanner", "owasp", "infosec", "dast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
# Sin dependencias: Centinela usa solo la librería estándar de Python.
dependencies = []

[project.optional-dependencies]
# Solo si se quiere usar el modo de pentest con IA (opcional, no requerido).
ai = ["anthropic>=0.105"]

[project.scripts]
centinela = "cli:main"

[project.urls]
Homepage = "https://github.com/santi/centinela"

[tool.setuptools]
py-modules = ["cli"]
packages = ["core"]
